[gd_scene load_steps=3 format=3 uid="uid://bmhi67cn87rre"]

[ext_resource type="Script" path="res://src/main/scripts/objects/job_item.gd" id="1_ii6jw"]
[ext_resource type="Texture2D" uid="uid://cnsbl2jwjedfk" path="res://assets/test_assets/character_icons/reference_2.jpg" id="2_0nsju"]

[node name="job_item" type="MarginContainer"]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_right = 0.392969
anchor_bottom = 0.075
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.84, 1)
script = ExtResource("1_ii6jw")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="job_icon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_0nsju")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="job_title" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="salary" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "Salary: %s"
horizontal_alignment = 1

[node name="level" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "Level: %s"
horizontal_alignment = 1

[node name="Button" type="Button" parent="HBoxContainer"]
self_modulate = Color(0.529067, 0.529067, 0.529067, 1)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "GET JOB"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="button_up" from="HBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
